3.4/about/features.md
---
layout: default
sitemap: false
title: Funktionen
description: "InGrid: Indexieren, Recherchieren, Visualisieren, Teilen"
---

## Funktionen von InGrid

* Portal- und Recherchefunktionen wie Volltextsuche, fach- und geothesaurusbasierte Suche, Anzeige aktueller Nachrichten, themenbasierter Zugang
* Visualisierung digitaler Karten über einen integrierten OGC-, INSPIRE- und GDI-DE-konformen Karten Client
* Räumliche Suche nach Karten, Diensten und anderen Informationsobjekten
* Bestimmung des Raumbezugs von nicht georeferenzierten Inhalten über semantische Analyse der im Dokument benannten Ortsnamen
* INSPIRE-konforme Beschreibung, Verwaltung und Verteilung von Geodaten und Geo-Diensten im OGC-, INSPIRE- und GDI-DE-konformen Metadatenwerkzeug "InGridEditor" (IGE)
* Einbindung von externen Geodatenkatalogen über OGC-konforme Catalog Service Web Schnittstellen
* Transfer von InGrid-Metadaten in Geodateninfrastrukturen wie z.B. die GDI-DE oder INSPIRE über die integrierte Katalog-Schnittstelle
* Vernetzung von Datenquellen über mehrere InGrid-Instanzen

