7.3.0/about/features.md
---
layout: default
title: Funktionen
description: "InGrid: Indexieren, Recherchieren, Visualisieren, Teilen"
---

## Funktionen von InGrid

* Portal- und Recherchefunktionen wie Volltextsuche, fach- und geothesaurusbasierte Suche, Anzeige aktueller Nachrichten, themenbasierter Zugang
* Visualisierung digitaler Karten über einen integrierten Karten-Client
* Räumliche Suche nach Karten, Diensten und anderen Informationsobjekten
* INSPIRE-konforme Beschreibung, Verwaltung und Verteilung von Geodaten und Geo-Diensten im OGC-, INSPIRE- und GDI-DE-konformen Metadatenwerkzeug "InGridEditor" (IGE)
* Erfassung und Publikation von Umweltverträglichkeitsprüfungen inkl. Abbildung von Verfahrensschritten, Upload von Dokumenten und Publikation von Informationen zur Bauleitplanung
* Verwendung als Opendata Infrastruktur (Erfassung, Recherche, Weitergabe von Opendata Daten im DCAT-AP.DE Format)
* Aufbau einer harmonsierten Zeitreihendatan Infrastruktur (OGC Sensor Things API) und Darstellung von Messwerten in einem Web Client
* Einbindung von externen Geodatenkatalogen über OGC-konforme Catalog Service Web Schnittstellen
* Transfer von InGrid-Metadaten in Geodateninfrastrukturen wie z.B. die GDI-DE oder INSPIRE über die integrierte Katalog-Schnittstelle
* Vernetzung von Datenquellen über mehrere InGrid-Instanzen

